Add explicit path mappings and jsconfig for Vercel compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/components/*": ["./components/*"],
+      "@/lib/*": ["./lib/*"],
+      "@/app/*": ["./app/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/types/*": ["./types/*"]
     },
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": false,
