--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.0",
     "@tiptap/extension-color": "^3.7.2",
+    "@tiptap/extension-font-family": "^3.7.2",
     "@tiptap/extension-link": "^3.7.2",
     "@tiptap/extension-placeholder": "^3.7.2",
+    "@tiptap/extension-table": "^3.7.2",
+    "@tiptap/extension-table-cell": "^3.7.2",
+    "@tiptap/extension-table-header": "^3.7.2",
+    "@tiptap/extension-table-row": "^3.7.2",
     "@tiptap/extension-text-align": "^3.7.2",
     "@tiptap/extension-text-style": "^3.7.2",
     "@tiptap/extension-underline": "^3.7.2",
